# rckid-v1

./: .gitignore  BOM.md  CMakeLists.txt  FEATURES.md  NOTES.md  PINOUT.md  README.md  SDIMAGE.md  TODO.md  retroarch.cfg
assets/: logo-black.pptx  logo-bw.pptx  logo-white.pptx
avr-i2c-bootloader/: CMakeLists.txt  README.md  platformio.ini
avr-i2c-bootloader/src/: bootloader.cpp  config.h  i2c-bootloader.cpp  i2c-programmer.cpp  programmer.cpp  programmer.h
beacon/: README.md
common/: comms.h
docs/: ASSEMBLY.md  BOM.md  FEATURES.md  README.md  USER_GUIDE.md
hardware/: case.skp  case2.skb  case2.skp  lego-remote.dch  lego-remote.dip  rcboy-dimensions.dip  rcboy.dch  rcboy.dip  rcboy.skb  rcboy.skp  rcboy2.dip  rcboy_framed.dip  rcboy_old.dip  rckid-top-plate.dip  rckid-top-plate.dxf  rckid.dch  rckid.dip  rckid.skp
hardware_old/: board.dip  bom.md  picoboy.dch  picoboy.dip  rcboy.skb  rcboy.skp
include/: README.md  comms.h
include/peripherals/: adxl345.h  ina219.h  mpu6050.h  neopixel.h  nrf24l01.h  nrf24l01_old.h  pcd8544.h  ssd1306.h  sx1278.h
include/platform/: arduino.h  color.h  gpio.h  i2c.h  mock.h  platform.h  rp2040.h  rpi.h  spi.h  spinlock.h  utils.h
include/platform/peripherals/: ina219.h  neopixel.h  nrf24l01.h  nrf24l01_old.h  pcd8544.h  sx1278.h
include/utils/: color.h  exec.h  fonts.h  intelhex.h  json.h  locks.h  process.h  spinlock.h  time.h  utils.h  utils_tests.cpp
joypads/: rckid-gamepad.cfg
lego-remote/: README.md  platformio.ini
lego-remote/src/: lego-remote.cpp
lib/: CMakeLists.txt  README.md
lib/libogg/: crctable.h  framing.c
lib/libopus/celt/: cwrs.c
lib/libopus/silk/: sigm_Q15.c
lib/sd/: CMakeLists.txt  README.md
nrf-repeater/: platformio.ini
nrf-repeater/src/: nrf-repeater.cpp
rbench/: CMakeLists.txt  README.md  main.cpp
rcboy/avr/: README.md  platformio.ini
rcboy/avr/src/: avr.cpp
rcboy/common/: comms.h  config.h
rcboy/rpi/: CMakeLists.txt  README.md  calibration.h  carousel.cpp  carousel.h  debug.h  debug_info.h  driver.cpp  driver.h  gamepad.cpp  gamepad.h  gui.cpp  gui.h  log.h  main.cpp  menu.cpp  menu.h  rcboy.qrc
rcboy/rpi-raylib/: CMakeLists.txt  README.md  events.h  main.cpp  rcboy.cpp  rcboy.h
rcboy/rpi-raylib/gui/: carousel.h  gui.h
rcboy/rpi/driver/: CMakeLists.txt  gamepad.cpp  gamepad.h
rcboy/rpi/gamepad/: README.md  gamepad.cpp  gamepad.h  main.cpp
rcboy/rpi/gui/: CMakeLists.txt  main.cpp  main_window.cpp
rcboy/rpi/rcboy/: CMakeLists.txt  README.md  calibration.h  main.cpp  main_window.h
rcboy/rpi/test-avr/: main.cpp
rcboy/rpi/test-radio/: main.cpp
rcboy/rpi/widgets/: carousel.cpp  carousel.h  debug_info.h  gauge.h  menu.cpp  menu.h  page.h  remote.h  walkie-talkie.h
rckid/avr/: README.md  platformio.ini
rckid/avr/src/: avr.cpp  avr_old.h
rckid/common/: comms.h  config.h  remote.h
rckid/rpi/: CMakeLists.txt  README.md  animation.cpp  animation.h  audio.cpp  audio.h  bsod.h  canvas.h  carousel.h  carousel_dir.h  carousel_json.h  clock.h  debug_view.h  events.h  external_app.h  game_player.h  gauge.h  gui.cpp  gui.h  json_carousel.h  keyboard.h  main.cpp  menu.cpp  menu.h  music_player.h  nrf_sniffer.h  opus.cpp  opus.h  pixel_editor.h  raylib_cpp.h  raylib_wrapper.h  rckid.cpp  rckid.h  recorder.h  remote.h  torchlight.h  video_player.h  wait.h  walkie-talkie.h  walkie_talkie.h  (+4 more)
rckid/rpi/gui/: animation.cpp  animation.h  carousel.h  debug_view.h  events.h  game_player.h  gauge.h  gui.cpp  gui.h  keyboard.h  menu.cpp  menu.h  music.h  music_player.h  pixel-editor.h  pixel_editor.h  raylib-cpp.h  raylib_cpp.h  remote.h  torchlight.h  video_player.h  walkie-talkie.h  widget.cpp  widget.h  widget_helper.h
remote/: README.md  lego_remote.h  remote.h
retroarch/: RetroArch-0823-212800.cfg  retroarch-core-options.cfg  retroarch.cfg  retroarch.cfg.full
retroarch/joypads/: rckid-gamepad.cfg
rpi/: ili9341.service
rpi/gamepad/: 99-rcboy-gamepad.rules  CMakeLists.txt  gamepad.cpp  gamepad.h  main.cpp
rpi/test-radio/: CMakeLists.txt  main.cpp
sd/: .xinitrc  99-rcboy-gamepad.rules  99-rckid-gamepad.rules  IMAGE.md  autostart.sh  config.txt  install.sh  rckid.service  wpa_supplicant.conf
src/: graphics.h  ili9341.h  ili9341.pio  picoboy.cpp
src-avr/: README.md  platformio.ini
src-avr/src/: avr.cpp
src/audio/: audio.h  i2s.pio
src/graphics/: canvas.h  gfx.h  graphics.h  ili9341.h  ili9341.pio
src/graphics/fonts/: FreeMono12pt7b.h
src/peripherals/: ili9225.h  ili9341.cpp  ili9341.h  mpu6050.h
src/rp2040/: i2c.h
src/sd/: hw_config.cpp  sdfs.h
templates/games/: folder.json
templates/videos/: folder.json
test-avr/: CMakeLists.txt
test-nrf/: README.md  platformio.ini
test-nrf/src/: lego-remote.cpp  test-nrf.cpp
test-radio/: README.md  platformio.ini
test-radio/src/: test-radio.cpp
test-receiver/: platformio.ini
test-receiver-nrf24l01p/: platformio.ini
test-receiver-sx1278/: platformio.ini
test-receiver/src/: test-receiver.cpp
test-sx1278/: platformio.ini
test-sx1278/src/: test-receiver.cpp
tools/: CMakeLists.txt  divider.cpp
wifi-beacon/: README.md
